--- a/sources/scss/_variables.scss
+++ b/sources/scss/_variables.scss
@@ -1,9 +1,12 @@
 $white:#fff;
 $black:#000;
 $gray:#C0C0C0;
+$primary:#3B398F;
 
 $white-rgb: rgb(225,255,255);
 $black-rgb: rgb(0,0,0);
 $gray-rgb: rgb(192,192,192);
 
+
+$text: #212529;
 
