--- a/sources/scss/styles.scss
+++ b/sources/scss/styles.scss
@@ -1,1 +1,56 @@
 @import "variables";
+
+body{
+    background-color: #{$gray};
+    color: #{$text};
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 3rem;
+    padding: 3rem;
+    border-radius: 25px;
+    background-color: white;
+}
+
+h1{
+    text-transform: uppercase;
+    color: #{$primary};
+}
+
+.mtl{
+    margin-top: 2rem;
+}
+
+.btn{
+    background-color:#{$primary} ;
+    padding: 10px 18px;
+    color: #{$white};
+    text-decoration: none;
+    border-radius: 25px;
+    &:hover{
+        background-color: #{$text};
+        cursor: pointer;
+    }
+}
+
+.quote{
+    color: #C0C0C0;
+}
+
+.picture{
+    height: 220px;
+    width: auto;
+    
+}
+
