Add SCSS compilation

--- a/sources/scss/styles.scss
+++ b/sources/scss/styles.scss
@@ -54,3 +54,10 @@ h1{
     
 }
 
+
+.st0{fill:#{$white};stroke:#{$primary};stroke-width:#{$stroke-width};}
+.st1{fill:#{$primary};}
+.st2{fill:#{$white};stroke:#{$text};stroke-width:#{$stroke-width};}
+.st3{display:none;}
+.st4{fill:none;stroke:#{$text};stroke-width:#{$stroke-width};stroke-linecap:round;}
+.st5{fill:#{$primary};stroke:#{$text};stroke-width:#{$stroke-width};stroke-linecap:round;}
